# cpp_vscode_template

./: .gitignore  CMakeLists.txt
src/: main.cpp
